# mcp-prefect

./: Dockerfile  README.md  pyproject.toml  server.py
src/mcp_prefect/: __init__.py  server.py
