[project]
name = "mcp-prefect"
version = "0.1.0"
description = "Prefect MCP server wrapper - thin layer around prefect-mcp-server"
requires-python = ">=3.10"
dependencies = ["prefect-mcp-server>=0.1.0"]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
mcp-prefect = "mcp_prefect.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_prefect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
